--- a/rpa-certificates-of-free-sale/Logic Workflows/FindCertificateTemplate.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/FindCertificateTemplate.xaml
@@ -22,7 +22,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1794,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1375,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>FindCertificateTemplate_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -346,7 +346,7 @@
                                                     <OutArgument x:TypeArguments="x:String">[OUT_strCertificatePath]</OutArgument>
                                                   </Assign.To>
                                                   <Assign.Value>
-                                                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber + "-" + IN_intCertificateCounter.ToString + ".doc"]</InArgument>
+                                                    <InArgument x:TypeArguments="x:String">[IN_strWorkingFolderPath + IN_strReferenceNumber.Trim + "-" + IN_intCertificateCounter.ToString.Trim + ".doc"]</InArgument>
                                                   </Assign.Value>
                                                 </Assign>
                                               </If.Else>
@@ -834,7 +834,12 @@
                   </sap:WorkflowViewStateService.ViewState>
                   <ui:CommentOut sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="CommentOut_4">
                     <ui:CommentOut.Body>
-                      <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_12">
+                      <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="304,152" sap2010:WorkflowViewState.IdRef="Sequence_12">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
                         <Assign DisplayName="Assign OUT_intCertificateCounter" sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_32">
                           <Assign.To>
                             <OutArgument x:TypeArguments="x:Int32">[OUT_intCertificateCounter]</OutArgument>
